removed overflow... couldn't find bugs because of that yet... restore version before if weird behaviour occurs

--- a/src/style.css
+++ b/src/style.css
@@ -504,7 +504,7 @@ section.advert > p{
 @media (min-width:770px){
 
     .main-content{
-        overflow: hidden;
+        /* overflow: hidden; */
         position: relative;
         width: 100%;
     }
